@@ -1,3 +1,9 @@
+2015-08-24  Robert D. Vincent <robert.d.vincent@mcgill.ca>
+   * libsrc/netcdf_convenience.c: Changed the logic in miopen() to
+	explicitly differentiate netCDF vs. HDF5 files. This was needed
+	because ncopen() in netCDF 4.4 successfully opens HDF5 files, so
+	the old	logic no longer worked.
+
 2015-08-13  Robert D. Vincent <robert.d.vincent@mcgill.ca>
    * volume_io/Volumes/input_nifti.c: Fix loading of dynamic scans, handle
 	NIfTI units.
